--- a/package.json
+++ b/package.json
@@ -5,19 +5,22 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start": "react-native start",
+    "start": "react-native start ",
     "test": "jest"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.24.7",
     "@react-native-community/slider": "^4.5.2",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.4.0",
+    "babel-plugin-react-remove-properties": "^0.3.0",
     "react": "^18.2.0",
-    "react-native": "^0.74.2",
+    "react-native": "^0.74.3",
     "react-native-asset": "^2.1.1",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.17.1",
+    "react-native-reanimated": "^3.13.0",
     "react-native-safe-area-context": "^4.10.7",
     "react-native-svg": "^15.3.0",
     "react-native-svg-transformer": "^1.4.0",
@@ -25,9 +28,9 @@
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.24.7",
     "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
+    "@babel/runtime": "^7.24.7",
     "@react-native/babel-preset": "^0.74.84",
     "@react-native/eslint-config": "^0.74.84",
     "@react-native/metro-config": "^0.74.84",
