--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "react-native-asset": "^2.1.1",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.17.1",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.13.0",
     "react-native-safe-area-context": "^4.10.7",
     "react-native-svg": "^15.3.0",
     "react-native-svg-transformer": "^1.4.0",
     "react-native-track-player": "^4.1.1",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
