--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-track-player": "^4.1.1",
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "reselect": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
